# alat-rs

./: .gitignore  AUDIT_FINDINGS.md  Cargo.toml  MY_API_MAP.md  README.md  WEMA_API_ONBOARDING.md
src/: client.rs  config.rs  envelope.rs  error.rs  lib.rs
src/modules/: account.rs  bills.rs  mod.rs  statement.rs  transfer.rs  virtual_account.rs  wallet.rs  webhook.rs
tests/: sdk_tests.rs
