[package]
name = "alat-rs"
version = "0.2.2"
edition = "2024"
description = "Unofficial, type-safe, async Rust client for the ALAT by Wema banking APIs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/McEazy2700/alat-rs"
homepage = "https://github.com/McEazy2700/alat-rs"
documentation = "https://docs.rs/alat-rs"
keywords = ["alat", "wema", "banking", "fintech", "nigeria"]
categories = ["api-bindings"]

[lib]
name = "alat"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
